{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 60,
  "lineage": "e8096140-fe72-c77e-e546-d454d89f1d17",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:route-table/rtb-06b93d2cd714101ba",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0333e022d74483457",
                "route_table_id": "rtb-06b93d2cd714101ba",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-06b93d2cd714101ba",
            "owner_id": "861261673998",
            "route_table_id": "rtb-06b93d2cd714101ba",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071cbe32d470ef35a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "amvgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:internet-gateway/igw-071cbe32d470ef35a",
            "id": "igw-071cbe32d470ef35a",
            "owner_id": "861261673998",
            "tags": {
              "Name": "amigw"
            },
            "tags_all": {
              "Name": "amigw"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "amvr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071cbe32d470ef35a",
            "id": "r-rtb-06b93d2cd714101ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b93d2cd714101ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.amvgw",
            "aws_vpc.amvn1",
            "data.aws_route_table.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:security-group/sg-0c98574a5019abc72",
            "description": "for sgp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c98574a5019abc72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for ssh",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "amvsg2",
            "name_prefix": "",
            "owner_id": "861261673998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amvsg"
            },
            "tags_all": {
              "Name": "amvsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trail_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-00f57b773d3027423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f57b773d3027423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "god"
            },
            "tags_all": {
              "Name": "god"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-03774e8411e448f70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03774e8411e448f70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bless"
            },
            "tags_all": {
              "Name": "bless"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-0de3a3230e4ba075c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de3a3230e4ba075c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "you"
            },
            "tags_all": {
              "Name": "you"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-01b3e9d84f01310df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b3e9d84f01310df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "all"
            },
            "tags_all": {
              "Name": "all"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-0c2443ac61e102aa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2443ac61e102aa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the"
            },
            "tags_all": {
              "Name": "the"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-0fc49a669ffb7ad3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc49a669ffb7ad3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "time"
            },
            "tags_all": {
              "Name": "time"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:subnet/subnet-017b3d922241815ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017b3d922241815ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "861261673998",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boaz"
            },
            "tags_all": {
              "Name": "boaz"
            },
            "vpc_id": "vpc-06ffb20a28041b7e5"
          },
          "dependencies": [
            "aws_vpc.amvn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "amvn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:861261673998:vpc/vpc-06ffb20a28041b7e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c041e391a2456b6a",
            "default_route_table_id": "rtb-06b93d2cd714101ba",
            "default_security_group_id": "sg-0cc1c79a5e2e20d6d",
            "dhcp_options_id": "dopt-0fff7062771cf38d5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ffb20a28041b7e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b93d2cd714101ba",
            "owner_id": "861261673998",
            "tags": {
              "name": "amvotechvpc"
            },
            "tags_all": {
              "name": "amvotechvpc"
            }
          }
        }
      ]
    }
  ]
}